Fix code blocks and update dependencies
Signed-off-by: Dani Llewellyn <dani@bowlhat.net>

--- a/assets/css/_page/_single.scss
+++ b/assets/css/_page/_single.scss
@@ -225,6 +225,10 @@
         [theme=dark] & {
           border-color: darken($table-thead-color-dark, 2%);
         }
+
+        &:last-child {
+          width: 100%;
+        }
       }
 
       tr:last-child td:first-child {
