--- a/assets/css/_ublogger.scss
+++ b/assets/css/_ublogger.scss
@@ -1210,7 +1210,7 @@ figure {
   user-select: none;
 }
 
-code:not([class*="language-"]) {
+:not(pre)>code:not([class*="language-"]) {
   background: #f5f2f0;
   padding: .4rem;
   border-radius: 3px;
